hard-gists/1118585/run.log
=== Docker Run Log for 1118585 ===
Started at: Mi 29. Okt 11:52:04 CET 2025

[2025-10-29 11:52:04] START: Running container for 1118585
[2025-10-29 11:52:04] SUCCESS: Container 80f3a6826b5ce8fb24dcafc93f279bf0be9fdd5c80c3a3378a96d9172826ae58 started for 1118585
=== Container logs for 1118585 ===
  File "/snippet.py", line 34
    print self.n
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1118585 ===
[2025-10-29 11:52:06] INFO: Container 80f3a6826b5ce8fb24dcafc93f279bf0be9fdd5c80c3a3378a96d9172826ae58 has stopped
